--- a/client/index.html
+++ b/client/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script defer src="./index.js"></script>
+    <link rel = 'stylesheet' href="./index.css">
 </head>
 <body>
     <form>
         <input id="title" placeholder="Title" required>
         <input id="author" placeholder="Your name" required>
-        <input id="content" placeholder="Your story" required>
+        <textarea cols = 1 rows =5 id="content" placeholder="Your story" required></textarea>
         <button>Publish</button>
     </form>
 </body>
