--- a/client/post.html
+++ b/client/post.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script defer src="./post.js"></script>
+    <link rel='stylesheet' href = './posts.css'>
 </head>
 <body>
-    <h1 id="title">title</h1>
-    <h1 id="author">adwaw</h1>
-    <h1 id="content"></h1>
+    <h1 id="title">Post not found</h1>
+    <p id="author"></p>
+    <p id="content"></p>
 </body>
 </html>
