post not found fixed

--- a/client/post.html
+++ b/client/post.html
@@ -9,7 +9,7 @@
     <link rel='stylesheet' href = './posts.css'>
 </head>
 <body>
-    <h1 id="title">Post not found</h1>
+    <h1 id="title"></h1>
     <p id="author"></p>
     <p id="content"></p>
 </body>
